# rhythmbox-spotify

./: .autotools  .cproject  .project  AUTHORS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in~  configure  configure.ac  configure.ac~
src/: Makefile.am  Makefile.in  a.out  rb-spotify-plugin.c  rb-spotify-plugin.h  rb-spotify-source.c  rb-spotify-source.h  rb-spotify-src.c  spotify-prefs.ui  spotify.rb-plugin.in
