lib_LTLIBRARIES = librhythmbox-spotify.la

librhythmbox_spotify_la_SOURCES = audio.c		   \
								  appkey.c		   \
								  rb-spotify-src.c \
								  rb-spotify-source.c \
								  rb-spotify-plugin.c

librhythmbox_spotify_la_LIBADD = $(DEPENDENCIES_LIBS)								  
librhythmbox_spotify_la_LDFLAGS = $(DEPENDENCIES_LIBS)
librhythmbox_spotify_la_CFLAGS = $(DEPENDENCIES_CFLAGS)

								  